--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,14 @@
-# name: test
-# on:
-#   - push
-# jobs:
-#   test:
-#     name: test
-#     runs-on: macos-latest
-#     timeout-minutes: 10
-#     steps:
-#       - uses: actions/checkout@v3
-#       - name: Install dotfiles
-#         run: sh -c "$(curl -fsLS chezmoi.io/get)" -- init --apply -S .
+name: test
+on:
+  push:
+    branches:
+      - "releases/**"
+jobs:
+  test:
+    name: test
+    runs-on: macos-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dotfiles
+        run: sh -c "$(curl -fsLS chezmoi.io/get)" -- init --apply -S .
